fix: updating relationship